sre-cloud-project/apps/app2/k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app2
spec:
  hosts:
  - app2
  http:
  - route:
    - destination:
        host: app2
        port:
          number: 80
